--- a/mod-01/semana-02/ex08-PadariaTechPlus/index.html
+++ b/mod-01/semana-02/ex08-PadariaTechPlus/index.html
@@ -20,6 +20,7 @@
         </section>
         <section class="body" id="body"></section>
         <section class="footer" id="footer"></section>
+        <section class="footer2" id="footer2"></section>
       </div>
     </main>
   </body>
